# pmcrypt

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  tox.ini
pmcrypt/: __init__.py  manager.py
tests/: test_hash.py
