[tool.poetry]
name = "pmcrypt"
version = "0.1.0"
description = "A Python package to properly handle passwords"
authors = ["Vitaman02"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8.1"


[tool.poetry.group.dev.dependencies]
black = "^23.1.0"
flake8 = "^6.0.0"
isort = "^5.12.0"
pre-commit = "^3.0.4"
mypy = "^1.0.0"
tox = "^4.4.5"
pytest = "^7.2.1"
coverage = "^7.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
